--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 
+  
+
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,python
 
@@ -160,6 +162,6 @@ cython_debug/
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,python
-Datasets/*
-Configs/override.yaml
+datasets/*
+configs/override.yaml
 checkpoints/*/*.pth
